# tingle

./: .buildinfo  .doit.db.dir  .gitignore  .gitmodules  Untitled.ipynb  Untitled1.ipynb  _config.yml  _toc.yml  conf.py  genindex.html  index.rst  objects.inv  pyproject.toml  readme.html  readme.md  readme.rst  sanitize.cfg  search.html  searchindex.js  testlityml.yml.md  testyml.yml  xxx.sqlite
.doctrees/: environment.pickle  index.doctree  readme.doctree
.doctrees/tingle/: readme.doctree
.doctrees/tingle/tests/: test_python.doctree  testmd.doctree  testyml.yml.doctree
.github/workflows/: docs.yml  linter.yml  python-package.yml
_sources/: readme.md
_sources/docs/: background.md
_sources/docs/sample/: readme.md
_sources/docs/sample/lit_fizz/: readme.md
_sources/tingle/: extension.md  readme.md
_sources/tingle/docs/: testmd.md
_sources/tingle/tests/: testtemplate.md
docs/: 1968-12-09-mother-of-all-demos.md.html  _toc.yml  about-sample.html  about-sample.md  background.html  background.md
docs/sample/: readme.html
docs/sample/lit_fizz/: readme.html
tingle/: MANIFEST.in  __init__.py  __main__.py  emoji.py  extension.html  extension.py  lisp.py  loaders.py  md.py  others.py  parameterize.html  parameterize.md  parameterize.py  pytest_.py  python.py  readme.html  readme.md  rst.py  top_level_return.py  util.py  weave.html  weave.md  weave.py  yml.html  yml.md  yml.py
tingle/docs/: myidea.html  myidea.md  myidea.xsh.html  myidea.xsh.md  test_cli.md.html  test_cli.md.ipynb  test_extension.md.html  test_extension.md.ipynb  test_tingle.html  test_tingle.md  testmd.html  testschema.yml.html  testtemplate.html  testxo.xsh.html  testyml.yml.html
tingle/tests/: test_cli.ipynb  test_cli.md.html  test_cli.md.ipynb  test_extension.ipynb  test_extension.md.html  test_extension.md.ipynb  test_python.md  test_shebang.ipynb  test_tingle.html  test_tingle.md  testmd.html  testschema.yml.html  testschema.yml.md  testtemplate.html  testtemplate.md  testxo.xsh.html  testxo.xsh.md  testyml.yml.html  testyml.yml.md
