# https://flit.readthedocs.io

[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "tingle"
author = "deathbeds"
author-email = "tony.fast@gmail.com"
home-page = "http://github.com/deathbeds/tingle"
classifiers = ["License :: OSI Approved :: MIT License"]
requires=["myst-parser" , "importnb"]

[tool.flit.metadata.requires-extra]
test = ["pytest", "jsonschema", "nbval"]
doc = ["jupyter-book", "pyppeteer",  "doit"]

[tool.flit.entrypoints.pytest11]
pytest-tingle = "tingle.pytest_"

[tool.flit.entrypoints.console_scripts]
tingle = "tingle.__main__:main"

[tool.pytest.ini_options]
addopts = "--nbval tingle --sanitize-with sanitize.cfg"