# https://flit.readthedocs.io

[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "tingle"
author = "deathbeds"
author-email = "tony.fast@gmail.com"
home-page = "http://github.com/deathbeds/tingle"
classifiers = ["License :: OSI Approved :: MIT License"]
requires=["myst-parser", "importnb", "typer", "emoji"]

[tool.flit.metadata.requires-extra]
test = ["pytest", "jsonschema", "nbval", "xonsh"]
doc = ["jupyter-book", "pyppeteer",  "doit"]

[tool.flit.entrypoints.pytest11]
pytest-tingle = "tingle.pytest_"

[tool.flit.entrypoints.console_scripts]
tingle = "tingle.main:main"

[tool.pytest.ini_options]
addopts = """\
--nbval docs tingle/docs \
--sanitize-with sanitize.cfg \
-p no:warnings -p no:importnb -pno:pidgy\
--doctest-glob="*.md" \
--doctest-glob="*.ipynb" \
-v\
"""
python_files = "*.py"
norecursedirs="sample .ipynb_checkpoints"